--- a/views/dashboardPartner.ejs
+++ b/views/dashboardPartner.ejs
@@ -141,7 +141,7 @@
             <div class="row mt-3">
               <% recentAttachments.forEach((attachment) => { %>
               <div class="col-6 p-1">
-                <img src="<%= attachment.url %>" class="mb-2 mw-100 w-100 rounded" alt="image">
+                <img src="<%= attachment.url %>" class="mb-2 mw-100 w-100 rounded" alt="image" style="max-width: 300px; max-height: 300px;object-fit: contain;">
               </div>
               <% }); %>
             </div>
@@ -215,65 +215,3 @@
       updateCharts(currentYear);
     });
     </script>
-    <style>
-      #uniTalkChat {
-          position: fixed;
-          bottom: 90px;
-          right: 20px;
-          width: 450px;
-          height: 550px;
-          border: none;
-          border-radius: 10px;
-          z-index: 9999;
-          display: none;
-          box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
-      }
-      #uniTalkChat.show {
-          display: block;
-      }
-      #chatButton {
-          position: fixed;
-          bottom: 20px;
-          right: 20px;
-          width: 60px;
-          height: 60px;
-          background: #007bff;
-          color: white;
-          border: none;
-          border-radius: 50%;
-          font-size: 24px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-          box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
-          z-index: 10000;
-          transition: transform 0.3s ease;
-      }
-      #chatButton:active {
-          transform: scale(0.9);
-      }
-  </style>  
-
-  <!-- UniTalk Chat -->
-  <button id="chatButton"><i class="fa-solid fa-comments"></i></button>
-  <iframe 
-      id="uniTalkChat"
-      src="http://localhost:5000/api/chats/embed?api_key=9807df75-24c7-4d77-999c-3e654b85aaea&id_sender=1">
-  </iframe>
-
-  <script>
-      document.addEventListener("DOMContentLoaded", function () {
-          const chatButton = document.getElementById("chatButton");
-          const iframeChat = document.getElementById("uniTalkChat");
-
-          chatButton.addEventListener("click", function () {
-              // Toggle iframe chat
-              if (iframeChat.classList.contains("show")) {
-                  iframeChat.classList.remove("show");
-              } else {
-                  iframeChat.classList.add("show");
-              }
-          });
-      });
-  </script>
